Docker_files/examples/python-web-app/deployment-cm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-python-app
  labels:
    app: sample-python-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sample-python-app
  template:
    metadata:
      labels:
        app: sample-python-app
    spec:
      containers:
      - name: python-app
        image: rushi/rushidemo:v1
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 8000
      #volumes:
       # - name: db-connection
        #  configMap:
         #   name: test-cm
