Docker_files/examples/python-web-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: python-app-svc
spec:
  type: NodePort
  selector:
    app: sample-python-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      nodePort: 30007
